# SVF-example

./: .envrc  flake.nix
standalone-tool/: CMakeLists.txt
standalone-tool/src/: svf-tool.cpp
